# hackerFinder9000

./: .gitignore  .gitmodules  README.md  data_validation.ipynb  devenv.nix  pyproject.toml  secrets.env  test1.sh
.github/workflows/: cd.yml
src/: main.py
src/detection/: __init__.py  analyzer.py  attack_genes.py  fingerprint.py  ml_detector.py  patterns.py  threat_ontology.py  tracker.py
src/models/: __init__.py  openai_compat.py
